Include cofoja jar in classpath when testing release jars
-Even though we're no longer compiling/using contracts in tests,
 we still need the cofoja jar in the classpath when testing the
 release jars due to some bad behavior on the part of TestNG in
 not being able to handle missing annotation classes.

-We don't need to package the cofoja classes in the actual GATK
 jar, however (and we never have).

--- a/build.xml
+++ b/build.xml
@@ -1315,6 +1315,7 @@
                 <fileset dir="${lib.dir}">
                     <include name="scala*.jar"/>
                     <include name="jna*.jar"/>
+                    <include name="cofoja*.jar"/>
                 </fileset>
             </path>
         </path>
@@ -1332,6 +1333,11 @@
             <pathelement location="${java.contracts.dir}" />
             <pathelement location="${java.test.classes}" />
             <pathelement location="${scala.test.classes}" />
+            <path>
+                <fileset dir="${lib.dir}">
+                    <include name="cofoja*.jar"/>
+                </fileset>
+            </path>
         </path>
         <property name="testng.classpath" value="queue.binary.release.tests.classpath" />
     </target>
