Enable convenient display of diff engine output in Bamboo, plus misc. minor test-related improvements
-Diff engine output is now included in the actual exception message thrown as a
 result of an MD5 mismatch, which allows it to be conveniently viewed on the
 main page of a build in Bamboo.

Minor Additional Improvements:

-WalkerTestSpec now auto-detects test class name via new JVMUtils.getCallingClass()
 method, and the test class name is now included as a regular part of integration
 test output for each test.

-Fix race condition in MD5DB.ensureMd5DbDirectory()

-integrationtests dir is now cleaned by "ant clean"

GSA-915 #resolve

--- a/build.xml
+++ b/build.xml
@@ -1031,6 +1031,7 @@
         <delete dir="${staging.dir}"/>
         <delete dir="${dist.dir}"/>
         <delete dir="${pipelinetest.dir}"/>
+        <delete dir="${integration.tests.dir}"/>
     </target>
 
     <!-- Depend on this target if your target requires a clean working directory but you don't want to depend on clean directly -->
@@ -1043,6 +1044,7 @@
                 <available file="${staging.dir}" />
                 <available file="${dist.dir}" />
                 <available file="${pipelinetest.dir}" />
+                <available file="${integration.tests.dir}" />
                 <available file="${javadoc.dir}" />
                 <available file="${scaladoc.dir}" />
                 <available file="${gatkdocs.dir}" />
@@ -1078,6 +1080,7 @@
     <property name="scala.public.test.sources" value="${public.dir}/scala/test"/>
     <property name="scala.private.test.sources" value="${private.dir}/scala/test"/>
     <property name="scala.protected.test.sources" value="${protected.dir}/scala/test"/>
+    <property name="integration.tests.dir" value="integrationtests" />
     <property name="pipelinetest.dir" value="pipelinetests" />
     <property name="report" value="${build.dir}/report"/>
     <property name="iwww.report.dir" value="${user.home}/private_html/report"/>
