Changing from scala 2.9.2 to 2.10.2. --modified ivy dependencies --modified scala classpath in build.xml to include scala-reflect
--changed imports to point to the new scala scala.reflect.internal.util

--set the bootclasspath in QScriptManager as well as the classpath variable.

--removing Set[File] <-> Set[String] conversions
----Set is invariant now and the conversions broke
--removing unit tests for Set[File] <-> Set[String] conversions

--- a/build.xml
+++ b/build.xml
@@ -526,6 +526,7 @@
             <fileset dir="${lib.dir}">
                 <include name="scala-compiler-*.jar"/>
                 <include name="scala-library-*.jar"/>
+                <include name="scala-reflect-*.jar"/>
             </fileset>
         </path>
         <taskdef resource="scala/tools/ant/antlib.xml">
