Separate tests that access the knowledge base from other tests
The tests that access the knowledge base are interfering with the basic
ability to run the unit/integration test suite to completion -- these
few tests often take hours to complete.

Created a new class of test ("KnowledgeBaseTest") that runs separately
from the unit/integration test suite, with corresponding build target.
A new bamboo plan will be set up to run these tests independently so
that they don't interfere with unit/integration testing.

With this change, plus the recent changes to the parallel test runner,
unit/integration test suite runtime should be back down to ~30 minutes
on average.

--- a/build.xml
+++ b/build.xml
@@ -1415,6 +1415,13 @@
         <run-test testtype="${pipetype}" outputdir="${report}/${pipetype}" runfailed="false"/>
     </target>
 
+    <target name="knowledgebasetest" depends="test.compile,test.init" description="Run knowledge base tests">
+        <condition property="ktype" value="*KnowledgeBaseTest" else="${single}">
+            <not><isset property="single"/></not>
+        </condition>
+        <run-test testtype="${ktype}" outputdir="${report}/${ktype}" runfailed="false"/>
+    </target>
+
     <target name="failed-unit" depends="test.compile,test.init">
         <run-test testtype="${report}/*UnitTest/testng-failed.xml" outputdir="${report}/failed_rerun" runfailed="true"/>
     </target>
