--- a/build.xml
+++ b/build.xml
@@ -270,18 +270,18 @@
         <mkdir dir="${lib.dir}"/>
         <mkdir dir="${ivy.jar.dir}"/>
 
-        <!-- Comment out the following lines to build the GATK without a network connection, assuming you have all of the libraries cached already -->
+	<!-- Comment out the following lines to build the GATK without a network connection, assuming you have all of the libraries cached already -->
 
-        <get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/${ivy.jar.file}"
-             dest="${ivy.jar.dir}/${ivy.jar.file}"
-             usetimestamp="true"/>
+	<!--<get src="http://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/${ivy.jar.file}"-->
+	  <!--dest="${ivy.jar.dir}/${ivy.jar.file}"-->
+	  <!--usetimestamp="true"/>-->
         <taskdef resource="org/apache/ivy/ant/antlib.xml"
                  uri="antlib:org.apache.ivy.ant"
                  classpath="${ivy.jar.dir}/${ivy.jar.file}"/>
 
-        <get src="http://repo1.maven.org/maven2/org/apache/maven/maven-ant-tasks/${maven-ant-tasks.install.version}/${maven-ant-tasks.jar.file}"
-             dest="${ivy.jar.dir}/${maven-ant-tasks.jar.file}"
-             usetimestamp="true"/>
+	       <!--<get src="http://repo1.maven.org/maven2/org/apache/maven/maven-ant-tasks/${maven-ant-tasks.install.version}/${maven-ant-tasks.jar.file}"-->
+		 <!--dest="${ivy.jar.dir}/${maven-ant-tasks.jar.file}"-->
+		 <!--usetimestamp="true"/>-->
         <taskdef resource="org/apache/maven/artifact/ant/antlib.xml"
                  uri="antlib:antlib:org.apache.maven.artifact.ant"
                  classpath="${ivy.jar.dir}/${maven-ant-tasks.jar.file}"/>
