Fixed bug in JNI interface release_array Disabled OpenMP

--- a/PairHMM_JNI/Makefile
+++ b/PairHMM_JNI/Makefile
@@ -1,5 +1,4 @@
-OMPCFLAGS=-fopenmp
-#OMPLDFLAGS=-lgomp
+#OMPCFLAGS=-fopenmp
 
 #CFLAGS=-O2 -std=c++11 -W -Wall -march=corei7-avx -Wa,-q            -pedantic $(OMPCFLAGS) -Wno-unknown-pragmas
 #CFLAGS=-O2             -W -Wall -march=corei7 -mfpmath=sse -msse4.2 -pedantic $(OMPCFLAGS) -Wno-unknown-pragmas
